--- a/index.html
+++ b/index.html
@@ -2,10 +2,81 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Döküman</title>
+    <title>0223 Etüt Projeciliği</title>
+    <link rel="stylesheet" href="./style/index.css">
 </head>
+
 <body>
-    
+    <div class="">
+        <header class="header">
+            <div class="containerClamp">
+                <h1>İSMİM</h1>
+                <nav class="menu">
+                    <ul>
+                        <li class="menu--active"><a href="">anasayfa</a></li>
+                        <li><a href="">hakkında</a></li>
+                        <li><a href="">İletişim</a></li>
+                        <li><a href="">projelerim</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <section class="about containerClamp">
+            <div class="about__image"><img src="https://picsum.photos/seed/picsum/400/300" alt=""></div>
+            <div class="about__content">
+                <h2>İsmim</h2><button>projelerim</button>
+                <p><span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit natus ullam velit eius
+                        libero
+                        perspiciatis exercitationem vero molestias recusandae repellendus et alias vitae sunt ratione
+                        dolorem, quo id. Ut, animi.</span>
+                    Dolore.</span></p>
+            </div>
+        </section>
+        <section class="projects containerClamp">
+
+            <div class="projects__item">
+                <img class="project__image" src="https://picsum.photos/250/250?grayscale" alt="">
+                <p>Proje Başlığı</p>
+            </div>
+            <div class="projects__item">
+                <img class="project__image" src="https://picsum.photos/250/250?grayscale" alt="">
+                <p>Proje Başlığı</p>
+            </div>
+            <div class="projects__item">
+                <img class="project__image" src="https://picsum.photos/250/250?grayscale" alt="">
+                <p>Proje Başlığı</p>
+            </div>
+            <div class="projects__item">
+                <img class="project__image" src="https://picsum.photos/250/250?grayscale" alt="">
+                <p>Proje Başlığı</p>
+            </div>
+            <div class="projects__item">
+                <img class="project__image" src="https://picsum.photos/250/250?grayscale" alt="">
+                <p>Proje Başlığı</p>
+            </div>
+            <div class="projects__item">
+                <img class="project__image" src="https://picsum.photos/250/250?grayscale" alt="">
+                <p>Proje Başlığı</p>
+            </div>
+            <div class="projects__item">
+                <img class="project__image" src="https://picsum.photos/250/250?grayscale" alt="">
+                <p>Proje Başlığı</p>
+            </div>
+            <div class="projects__item">
+                <img class="project__image" src="https://picsum.photos/250/250?grayscale" alt="">
+                <p>Proje Başlığı</p>
+            </div>
+
+
+        </section>
+        <footer class="footer ">
+            <div class="footer__cta containerClamp ">
+                <p>Gördükleerinden memnun musun?</p>
+                <button>Bana Ulaş</button>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
