--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="">
         <header class="header">
             <div class="containerClamp">
-                <h1>İSMİM</h1>
+                <h1>Egemen Sucuoğlu</h1>
                 <nav class="menu">
                     <ul>
                         <li class="menu--active"><a href="">anasayfa</a></li>
